--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react-router-dom": "^5.3.3",
     "clsx": "^2.1.1",
     "convex": "1.21.1-alpha.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.30.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0"
   },
